# lpcrew

./: index.html
lpcrew/: .dockerignore  .env.example  .env.prod.example  .gitignore  DEPLOY.md  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  feed.csv  manage.py  pyproject.toml
lpcrew/core/: blocks.py  models.py  views.py
lpcrew/core/management/commands/: import_news.py  seed.py
lpcrew/core/migrations/: 0001_initial.py  0002_sitesettings_hd_loc.py
lpcrew/core/templates/: base.html
lpcrew/core/templates/core/includes/: footer.html  nav.html
lpcrew/home/: blocks.py  models.py
lpcrew/home/migrations/: 0001_initial.py  0002_alter_homepage_body.py  0003_alter_homepage_body.py  0004_marquee_items_data.py  0005_alter_homepage_body.py
lpcrew/home/templates/home/: home_page.html
lpcrew/home/templates/home/blocks/: about.html  bento.html  coaches.html  disciplines.html  dive_intro.html  faq.html  feature.html  (+11 more)
lpcrew/leads/: forms.py  models.py  notify.py  urls.py  views.py  wagtail_hooks.py
lpcrew/leads/migrations/: 0001_initial.py  0002_lead_meters.py
lpcrew/lpcrew/: urls.py  wsgi.py
lpcrew/lpcrew/settings/: base.py  dev.py  prod.py
lpcrew/news/: models.py
lpcrew/news/migrations/: 0001_initial.py
lpcrew/news/templates/news/: news_index_page.html  news_page.html
lpcrew/nginx/: default.conf
lpcrew/static/css/: style.css
lpcrew/static/js/: game.js  main.js
lpcrew/swims/: apps.py  models.py
lpcrew/swims/migrations/: 0001_initial.py
lpcrew/swims/templates/swims/: swim_index_page.html  swim_page.html
(+100 files in other folders)
